--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -1,32 +1,31 @@
 # .github/workflows/frogbot.yml
 
-name: "Frogbot Security Scan (User/Pass Auth)"
+name: "Frogbot Security Scan (User/Pass Auth via ENV)"
 
 on:
-  # 1. PULL REQUEST SCAN: Triggers on new/updated PRs to check for new vulnerabilities
+  # 1. PULL REQUEST SCAN: Triggers on new/updated PRs
   pull_request_target:
     types: [opened, synchronize] 
 
-  # 2. REPOSITORY SCAN: Triggers on push to the main branch (e.g., merge)
+  # 2. REPOSITORY SCAN: Triggers on push to the main branch
   push:
     branches:
       - main
   
-  # 3. SCHEDULED REPOSITORY SCAN: Triggers periodically to find and autofix existing issues
+  # 3. SCHEDULED REPOSITORY SCAN: Triggers periodically for autofix
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight UTC (adjust as needed)
+    - cron: "0 0 * * *" # Runs every day at midnight UTC
 
   # 4. MANUAL TRIGGER
   workflow_dispatch:
 
 permissions:
-  # Required for Frogbot to checkout code and create Autofix PRs
+  # Required for Git operations (checkout) and Autofix PR creation/comments
   contents: write           
-  # Required for Frogbot to comment on PRs and create Autofix PRs
   pull-requests: write      
-  # Recommended for uploading results to GitHub Security tab
+  # Required for uploading results to GitHub Security tab
   security-events: write    
-  # Required if using OIDC for JFrog auth (but not strictly needed for User/Pass)
+  # Required for OIDC, but harmless here, keep if uncertain
   id-token: write           
 
 jobs:
@@ -35,29 +34,31 @@ jobs:
     
     steps:
     - name: Checkout Repository
-      # Must use v4 or later for proper permissions handling
       uses: actions/checkout@v4 
       with:
-        # Checkout the PR head for Pull Request scans, or the commit SHA for Push/Scheduled scans
+        # Checkout the correct commit SHA for the PR or Push
         ref: ${{ github.event.pull_request.head.sha || github.sha }}
-        # The JF_GIT_TOKEN is a GitHub PAT used for Git operations (Autofix PR creation)
-        token: ${{ secrets.JF_GIT_TOKEN }}
-        fetch-depth: 0 # Fetch all history for accurate scan
+        # Use the GitHub-provided token for checkout operations
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
-    - name: Run Frogbot Scan
-      # Use the official Frogbot GitHub Action
+    - name: Run Frogbot Scan using ENV
+      # Use the latest version that supports backward compatibility via ENV
+      # Since you got an input error on V2, we are using the V2 tag, 
+      # but relying on environment variables (JF_USER/JF_PASSWORD)
       uses: jfrog/frogbot@v2 
-      with:
-        # 🔑 MANDATORY JFROG AUTHENTICATION (USING USERNAME/PASSWORD)
+      env:
+        # 🔑 MANDATORY JFROG AUTHENTICATION (PASSED VIA ENVIRONMENT)
+        # The Frogbot CLI often detects these environment variables
         JF_URL: ${{ secrets.JF_URL }}
         JF_USER: ${{ secrets.JF_USER }}
         JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
         
         # 🔑 MANDATORY GITHUB TOKEN (For Pull Request and Autofix operations)
+        # It is highly recommended to use a GitHub Personal Access Token (PAT)
+        # for this, stored in secrets.JF_GIT_TOKEN, as GITHUB_TOKEN has limitations.
         JF_GIT_TOKEN: ${{ secrets.JF_GIT_TOKEN }}
-
-        # Optional: Specify the JFrog Project Key if applicable
-        # JF_PROJECT_KEY: 'my-jfrog-project'
-
-        # Optional: Specify a custom config file path
-        # CONFIG_FILE_PATH: '.frogbot/frogbot-config.yml'
+        
+        # Optional: Add any other required Frogbot environment variables here
+        # E.g., JF_PROJECT: 'my-jfrog-project'
+        # E.g., JF_DEPS_REPO: 'npm-virtual'
