--- a/package.json
+++ b/package.json
@@ -1,13 +1,98 @@
 {
-  "name": "npm-example",
-  "version": "0.0.3",
-  "scripts": {
-    "start": "node helloworld"
-  },
+  "name": "skoda-xperience-editor",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "send": "^0.16.2"
+    "@babel/helper-validator-identifier": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "all-object-keys": "^2.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "classnames": "^2.2.6",
+    "core-js": "3.6.5",
+    "create-reducer": "^1.1.0",
+    "date-fns": "^2.16.1",
+    "file-saver": "^2.0.2",
+    "keycode": "^2.2.0",
+    "papaparse": "^5.3.0",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.27.1",
+    "ramda-adjunct": "^2.28.0",
+    "react": "^18.2.0",
+    "react-app-polyfill": "^2.0.0",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "^18.2.0",
+    "react-redux": "^7.2.2",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
+    "reduce-reducers": "^1.0.4",
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
+    "redux-undo": "^1.0.1",
+    "rxjs": "^6.6.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "debug": "^4.1.1"
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-knobs": "^6.3.2",
+    "@storybook/addon-viewport": "^6.5.16",
+    "@storybook/addons": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.3.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-react": "^7.21.5",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "start-local": "node run-local.js",
+    "build": "react-scripts build",
+    "build-library": "node set-env-and-build.js",
+    "lint": "eslint src/",
+    "lint:fix": "yarn lint --fix",
+    "prettier:check": "prettier --list-different \"src/**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
+    "prettier:fixall": "prettier --write \"src/**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)\"",
+    "storybook": "start-storybook -p 6006 -c .storybook --ci",
+    "storybook:build": "build-storybook -c .storybook -o storybook",
+    "test": "react-scripts test --env=jsdom --no-cache",
+    "test:coverage": "react-scripts test --coverage",
+    "test:prepush": "cross-env CI=true react-scripts test --env=jsdom --bail --changedSince master",
+    "validate": "yarn prettier:check && yarn lint && yarn test:coverage"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix --quiet",
+      "git add"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie < 11",
+    "not op_mini all"
+  ],
+  "resolutions": {
+    "commity-rehook-fork": "portal:./commity-rehook-fork/package"
   }
 }
